fix: minor ui bugs
- navbar pin not reponsive to color schema
- goaldisplay button not reponsive to color schema
- navbar links icon offcentre

--- a/src/app/dashboard/_components/Navbar/Navbar.module.css
+++ b/src/app/dashboard/_components/Navbar/Navbar.module.css
@@ -21,9 +21,14 @@
   color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
 }
 
+.pin {
+  color: light-dark(black, white);
+}
+
 .link {
   overflow: hidden;
   padding: var(--mantine-spacing-xs);
+  padding-right: var(--mantine-spacing-xl);
   border-radius: var(--mantine-spacing-sm);
 
   @mixin dark {
